// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test deployment with custom properties 1`] = `
Object {
  "Resources": Object {
    "secret4DA88516": Object {
      "DeletionPolicy": "Delete",
      "Properties": Object {
        "Description": "test secret description",
        "GenerateSecretString": Object {},
        "Name": "test secret name",
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
  },
}
`;

exports[`Test minimal deployment with no properties 1`] = `
Object {
  "Resources": Object {
    "secret4DA88516": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "GenerateSecretString": Object {},
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;
